# Simple-DBMS

./: CMakeLists.txt  README.md  algorithms.h  db.h  io.h  main.c  structs.h
algorithms/: binary_search.c
db/: appDb.c  initialization.c  teamDb.c
db/common/: file_operations.c  garbage_operations.c  index_operations.c  table_operations.c
io/: appIo.c  commonIo.c  teamIo.c
structs/: app.h  devTeam.h  index.h  studio.h
